@@ -2,6 +2,7 @@ from .holidays import Locale
 
 __all__ = [
     "Locale",
+    "cs-CZ",
     "da-DK",
     "de-AT",
     "de-BE",
